# midirect

./: .gitignore  Cargo.toml  LICENSE  README.md
rsc/: alphabet.json  arrows.json  config.json
src/: errors.rs  fs.rs  main.rs  mapping.rs  midi.rs
