[package]
name = "m2k"
version = "0.1.0"
authors = ["Andrey Ufimcev <aethe.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = { git = "https://github.com/enigo-rs/enigo.git", rev = "43a016f36939a59e1f1874e07bf057d08c31913e" }
midir = "0.7.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
